# mutuca

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
docs/example_files/: exemplo_arquivo_download.csv  relatorio_alimentacao_2022_text  relatorio_alimentacao_2023_text  relatorio_combustível_2022_text  relatorio_combustível_2023_text
docs/notebooks/: analise_do_portal_para_raspagem_de_dados_cota_parlamentar.ipynb  analise_dos_documentos_para_extracao_dos_dados.ipynb
mutuca/: items.py  middlewares.py  pipelines.py  settings.py
mutuca/google_drive_storage/: credentials.json  download_data.py  load_raw_data.py
mutuca/spiders/: __init__.py  cota_parlamentar_caruaru.py  parliamentary_allowance.py  parliamentary_fuel_allowance.py  parliamentary_meal_allowance.py
